--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Counter+-</string>
     <string name="plus">+</string>
     <string name="minus">-</string>
+    <string name="multiplication">*</string>
+    <string name="division">/</string>
 </resources>
